# discrec

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  index.html  package.json  pnpm-lock.yaml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  settings.rs
src-tauri/src/audio/: capture.rs  encoder.rs
src-tauri/src/discord/: bot.rs  mod.rs  receiver.rs
src/components/: AudioMeter.tsx  CompletedView.tsx  DiscordPanel.tsx  FormatSelector.tsx  RecordButton.tsx  RecordingHistory.tsx  SettingsPanel.tsx  StatusBar.tsx
src/hooks/: useDiscord.ts  useKeyboardShortcuts.ts  useRecorder.ts  useUpdater.ts
src/lib/: utils.ts
