[package]
name = "discrec"
version = "0.1.0"
description = "Beautiful, minimal Discord audio recorder"
authors = ["jmpijll"]
license = "MIT"
repository = "https://github.com/jmpijll/discrec"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "discrec_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0" }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
cpal = "0.15"
hound = "3.5"
chrono = "0.4"
dirs = "6"
parking_lot = "0.12"
anyhow = "1.0"
