[package]
name = "discrec"
version = "2.0.1"
description = "Beautiful, minimal Discord audio recorder"
authors = ["jmpijll"]
license = "MIT"
repository = "https://github.com/jmpijll/discrec"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "discrec_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
cpal = "0.15"
hound = "3.5"
flacenc = "0.4"
chrono = "0.4"
dirs = "6"
parking_lot = "0.12"
anyhow = "1.0"
tokio = { version = "1", features = ["sync", "time", "macros"] }
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache", "voice"] }
songbird = { version = "0.4", features = ["receive", "serenity", "rustls"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
mp3lame-encoder = "0.2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[target.'cfg(windows)'.dependencies]
wasapi = "0.22"
sysinfo = "0.34"
